kubernetes/deployment-prescription-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prescription-service
  template:
    metadata:
      labels:
        app: prescription-service
    spec:
      containers:
        - name: prescription-service
          image: 
          ports:
            - containerPort: 5005
