kubernetes/service-dossier-medical-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dossier-medical-service
spec:
  selector:
    app: dossier-medical-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
