kubernetes/service-facturation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facturation-service
spec:
  selector:
    app: facturation-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
