kubernetes/service-patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
