kubernetes/service-prescription-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prescription-service
spec:
  selector:
    app: prescription-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
