kubernetes/service-rendezvous-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rendezvous-service
spec:
  selector:
    app: rendezvous-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
