kubernetes/ingress-laboratoire-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laboratoire-service-ingress
spec:
  rules:
    - host: laboratoire-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laboratoire-service
                port:
                  number: 5005
