kubernetes/ingress-patient-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-service-ingress
spec:
  rules:
    - host: patient-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 5005
