kubernetes/ingress-prescription-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prescription-service-ingress
spec:
  rules:
    - host: prescription-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prescription-service
                port:
                  number: 5005
