kubernetes/ingress-rendezvous-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rendezvous-service-ingress
spec:
  rules:
    - host: rendezvous-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rendezvous-service
                port:
                  number: 5005
